# trakker

./: .gitignore  CMakeLists.txt  GenerateVersionHeader.cmake  README.md
aur/: PKGBUILD  trakker-git-0.0.1.0-1-x86_64.pkg.tar.zst
aur/pkg/trakker-git/: .BUILDINFO  .MTREE  .PKGINFO
aur/trakker-git/: config  packed-refs
aur/trakker-git/objects/pack/: pack-12bab4bc9798147caa8c9a0d737ba3c55043bc6f.idx  pack-12bab4bc9798147caa8c9a0d737ba3c55043bc6f.pack
src/: CMakeLists.txt  main.cpp  trakker.h  trakker_version.h.in
